data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1099.wast
;; 10. **Test Description**:     Design a loop encapsulating a combination of control structures with a `br_table` instruction whose index depends on data flow (e.g., stack values from previous computations). Mix valid and out-of-bounds cases ensuring proper stack unwinding and branch redirection.    **Constraint**: Ensure stack state does not affect default branching in data-driven index selection.    **Relation to `br_table` Edge Cases**: Ensures consistent and accurate branching behavior even when stack manipulation determines `br_table` indices.

(assert_invalid
  (module
    (func $data_driven_br_table
      (i32.const 0) (i32.const 1) (i32.add)
      (loop (result i32)
        (br_table 0 1 2) (i32.const 0) (drop)
      )
    )
  )
  "type mismatch"
)